Changelog
=========

1.2.0 (unreleased)
------------------

* Catch errors if sessions are disabled.
  [swampmonkey]

* Use ``plone.app.portlets.ManagePortlets`` permission, allows site-admins
  to add/edit the portlet.
  [ggozad]

* A folder type can implement IQuickUploadNotCapable
  so that upload is not allowed on it.
  [thomasdesvenain]

* We can include minimal.zcml file only to manually set IUploadCapable types.
  [thomasdesvenain]

* Add more messages into po files + french translations.
  [thomasdesvenain]

* Use IQuickUploadCapable interface to test if portlet has to be displayed.
  Avoid some 404 errors.
  [thomasdesvenain]

* User defined title is internationalized in plone domain.
  [thomasdesvenain]

* Remove !important in css, that shouldn't be used in base css.
  [thomasdesvenain]

* Portlet has a bottom left and bottom right.
  [thomasdesvenain]

* Javascripts and css are loaded for authenticated users only.
  Refs http://plone.org/products/collective.quickupload/issues/11.
  [frisi, thomasdesvenain]

* Fixed portlet field validation.
  [thomasdesvenain]

* Fixed internationalizations.
  Fixed .pot and .po files.
  [thomasdesvenain]

* Added try/finally around upload_lock protected code to ensure that the lock
  is released if an exception occurs.
  [swampmonkey]

* Added Spanish translation
  [hvelarde]


1.1.1 (2011-06-27)
------------------

* Notify ObjectInializedEvent at upload.
  Fixes http://plone.org/products/collective.quickupload/issues/7
  [thomasdesvenain, thanks to lars.eisbaer]

* Pass content_type to the ContentTypeRegistry
  Fixes http://plone.org/products/collective.quickupload/issues/13/
  [thomasw]

* Added Brazilian Portuguese translation
  [erico_andrei]

* Quickupload form allows to fill description for each uploaded file
  [regisrouet]


1.1.0 (2011-04-06)
------------------

* Mimetype detection works with blobs (plone 4.0+ files).
  [thomasdesvenain]

* Keep dots in filename during id normalization.
  [thomasdesvenain]
