@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel" meta_type="Plone Control Panel Tool">
+    <configlet title="Quick Upload"
+        action_id="QuickUpload" appId="collective.quickupload"
+        remove="True" />
+		<permission>Manage portal</permission>
+</object>
