@@ -1,0 +1,11 @@
+#[egg_info]
+#tag_build = dev
+#tag_svn_revision = true
+
+[distutils]
+index-servers =
+    pypi
+    ploneorg
+
+[pypi]
+[ploneorg]
