@@ -22,11 +22,13 @@ setup(name='collective.quickupload',
       include_package_data=True,
       zip_safe=False,
       install_requires=[
-          'setuptools',
-          # -*- Extra requirements: -*-
-      ],
+        'setuptools',
+        ],
+      extras_require={
+        'test': ['plone.app.testing'],
+        },
       entry_points="""
-          [z3c.autoinclude.plugin]
-          target = plone
+      [z3c.autoinclude.plugin]
+      target = plone
       """,
       )
